k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: core-service
  namespace: ${NAMESPACE}
  labels:
    app: core-service
spec:
  type: ClusterIP
  selector:
    app: core-service
  ports:
    - name: http
      port: 8082
      targetPort: http
      protocol: TCP
